apps/athlete-api/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: athlete-db
spec:
  selector:
    app: athlete-db
  ports:
    - port: 5432
      targetPort: 5432
