apps/athlete-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: athlete-api-service
spec:
  selector:
    app: athlete-api
  ports:
    - port: 8000
      targetPort: 8000
